# curium-rust-axum

./: .editorconfig  .env.sample  .gitignore  README.md  rustfmt.toml
configs/: dev.yaml
main/: Cargo.toml
main/src/: context.rs  lib.rs  main.rs  types.rs
main/src/infrastructure/: config.rs  db.rs  logger.rs
main/src/router/: mod.rs  user.rs
main/src/user/: api.rs  domain.rs  mod.rs  repository.rs
