[package]
name = "main"
version = "0.1.0"
edition = "2024"
resolver = "3"

[features]
default = ["db-sqlite"]
db-pg = ["sqlx/postgres"]
db-sqlite = ["sqlx/sqlite"]

[dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
axum = { version = "0.8.4", features = ["tower-log", "macros"] }
tower-http = { version = "0.6", features = ["auth", "trace", "cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2"
async-trait = "0.1"
figment = { version = "0.10", features = ["yaml", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "macros"] }
